# project-mo

api/: .gitignore  pyproject.toml  requirements.txt  vercel.json
api/app/: main.py
api/app/config/: __init__.py  cloudflareR2.py  firebase.py  gemini.py
api/app/func/: infolomba.py
api/app/models/: infolomba.py  response.py
api/app/routes/: infolomba.py
web_app/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
web_app/app/: env.server.tsx  root.tsx
web_app/app/components/404/: index.tsx
web_app/app/components/MoLogo/: MoLogoInfoLomba.tsx
web_app/app/components/animateUI/: GridBG.tsx  typingAnimation.tsx
web_app/app/routes/_index/: meta.tsx  route.tsx
web_app/app/routes/infolomba/: Footer.tsx  Header.tsx  context.tsx  route.tsx
web_app/app/routes/infolomba._index/: index.module.css  loader.tsx  meta.tsx  route.tsx
web_app/app/routes/infolomba.detail.$competitionId/: loader.tsx  meta.tsx  route.tsx
web_app/app/routes/infolomba.upload/: completeSection.tsx  formAction.tsx  formContext.tsx  importAction.tsx  loader.tsx  meta.tsx  route.tsx
web_app/app/types/: infolomba.d.ts
web_app/src/: main.tsx
web_app/src/components/InfoLomba/: Header.module.css  Header.tsx
web_app/src/components/MoLogo/: MoLogo.tsx  use-mo-logo-colors.ts
web_app/src/components/animateUI/: GridBG.tsx  typingAnimation.tsx
web_app/src/routes/: Root.tsx
web_app/src/routes/InfoLomba/: Detail.loader.tsx  Detail.tsx  Home.loader.tsx  Home.tsx  _Index.tsx  _interface.tsx
(+30 files in other folders)
